...
                            containerColor = AppColors.TabBar,
                        ) {
                            tabs.forEachIndexed { index, tab ->
                                NavigationBarItem(
                                    modifier = Modifier.testTag(
                                        when (index) {
                                            0 -> "tab-secrets"
                                            1 -> "tab-devices"
                                            else -> "tab-profile"
                                        }
                                    ),
                                    selected = selectedTabIndex == index,
                                    onClick = {
                                        viewModel.handle(MainViewEvents.SetTabIndex(index))
...
